# string-match-algo-benchmark

benchmark/: Cargo.toml  loremipsum.txt
benchmark/benches/: lorem_ipsum.rs  pi_bench.rs
benchmark/src/: main.rs
boyer_moore/src/: lib.rs
brute_force/: Cargo.toml
brute_force/benches/: benchmark.rs
brute_force/src/: lib.rs
kmp/src/: lib.rs
lorem_ipsum/: Cargo.toml
lorem_ipsum/src/: lib.rs  loremIpsum.txt
rabin_karp/src/: lib.rs
